refactor: restructure code base
Never ending story…

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   </title>
 </head>
 <body>
-  <monkey-bar now="80" label></monkey-bar>
+  <monkey-bar now="80" labeled></monkey-bar>
 </body>
 </html>
